--- a/pg_audit/ppg-15/tasks/main.yml
+++ b/pg_audit/ppg-15/tasks/main.yml
@@ -3,45 +3,110 @@
 - name: Configure repository
   include_tasks: ../../../../tasks/enable_repo.yml
 
-- name: install Percona Platform for PostgreSQL 15 packages
-  include_tasks: ../../../../tasks/install_ppg15.yml
+- name: Setup additional yum packages
+  yum:
+    name: "{{ packages }}"
+    update_cache: yes
+    state: present
+  vars:
+    packages:
+      - yum-utils
+      - centos-release-scl
+
+- name: setup devtoolset-7-gcc
+  yum:
+    name: devtoolset-7-gcc*
+    update_cache: yes
+    enablerepo: centos-sclo-rh-testing
+    state: present
+
+- name: Percona Platform for PostgreSQL rpm packages for RHEL and additional tools
+  yum:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+    - percona-postgresql-client-common
+    - percona-postgresql-common
+    - percona-postgresql-server-dev-all
+    - percona-postgresql15
+    - percona-postgresql15-contrib
+    - percona-postgresql15-devel
+    - percona-postgresql15-libs
+    - percona-postgresql15-llvmjit
+    - percona-postgresql15-plperl
+    - percona-postgresql15-plpython3
+    - percona-postgresql15-pltcl
+    - percona-postgresql15-server
+    - percona-postgresql15-test
+    - openssl-devel
+    - llvm-toolset-7-clang
+    - llvm5.0
+    - llvm-toolset-7
+    - readline-devel
+    - gcc
+    - gcc-c++
 
 - name: Initialize Postgres RHEL
-  command: /usr/pgsql-15/bin/postgresql-15-setup initdb
+  command: /usr/pgsql-15/bin/initdb -A trust -k /var/lib/pgsql/15/data
   environment:
     PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+  become_user: postgres
+
+- shell: gcc --version
+  register: gcc
+
+- debug: var=gcc.stdout_lines
+
+- name: Enable gcc 7
+  shell: echo "source /opt/rh/devtoolset-7/enable" | sudo tee -a /etc/profile;
+
+- name: Set source
+  shell: source /opt/rh/devtoolset-7/enable;
+
+- name: Delete old gcc
+  shell: rm /usr/bin/gcc
+
+- name: Set symbol link
+  shell: ln -s /opt/rh/devtoolset-7/root/usr/bin/gcc /usr/bin/gcc
+
+- shell: gcc --version
+  register: gcc
+
+- debug: var=gcc.stdout_lines
+
+- name: Clone pgaudit sources
+  git:
+    repo: "{{ repo }}"
+    version: "{{ version }}"
+    dest: /tmp/pg_audit
+  vars:
+    repo: "{{ lookup('env', 'COMPONENT_REPO') }}"
+    version: "{{ lookup('env', 'COMPONENT_VERSION') }}"
+  become_user: postgres
+
+- name: Build pgaudit from sources
+  make:
+    target: install
+    chdir: "/tmp/pg_audit"
+    params:
+      USE_PGXS: 1
+
+- name: Add extensions to postgresql.conf for RHEL
+  lineinfile:
+    path: /var/lib/pgsql/15/data/postgresql.conf
+    line: shared_preload_libraries = 'pgaudit'
   when: ansible_os_family == "RedHat"
+
+- name: Restart Postgres RHEL
+  service:
+    name: postgresql-15
+    state: restarted
+  register: out
 
 - name: Start Postgres RHEL
   service:
     name: postgresql-15
     state: started
     enabled: yes
-  when: ansible_os_family == "RedHat"
-
-- name: Install PPG tools
-  include_tasks: ../../../../tasks/install_ppg15_tools.yml
-
-- name: Install GCC Deb
-  apt:
-    name: gcc
-  when: ansible_os_family == "Debian"
-
-- name: Install GCC RHEL
-  yum:
-    name: gcc
-  when: ansible_os_family == "RedHat"
-
-- name: Create temporary directory for compilation
-  command: mkdir /tmp/libpq_command_temp_dir
-
-- name: Copy libpq source file
-  copy:
-    src: ../../common/files/lib_version.c
-    dest: /tmp/libpq_command_temp_dir
-
-- name: Delete dpkg-query for RHEL
-  yum:
-    name: dpkg
-    state: absent
-  when: ansible_os_family == "RedHat"
