--- a/ppg/pg-11-meta-server/playbooks/cleanup-rpm.yml
+++ b/ppg/pg-11-meta-server/playbooks/cleanup-rpm.yml
@@ -6,55 +6,7 @@
   tasks:
     - name: remove Postgresql rpm packages
       yum:
-        name: "{{ packages }}"
-        state: absent
-      vars:
-        packages:
-          - percona-postgresql15
-          - percona-postgresql-client-common
-          - percona-postgresql-common
-          - percona-postgresql-server-dev-all
-          - percona-postgresql15
-          - percona-postgresql15-contrib
-          - percona-postgresql15-debuginfo
-          - percona-postgresql15-devel
-          - percona-postgresql15-docs
-          - percona-postgresql15-libs
-          - percona-postgresql15-llvmjit
-          - percona-postgresql15-plperl
-          - percona-postgresql15-plpython
-          - percona-postgresql15-pltcl
-          - percona-postgresql15-server
-          - percona-postgresql15-test
-          - percona-postgresql15-debuginfo
-          - percona-postgresql15-debugsource
-          - percona-postgresql15-devel-debuginfo
-          - percona-postgresql15-libs-debuginfo
-          - percona-postgresql15-plperl-debuginfo
-          - percona-postgresql15-plpython3-debuginfo
-          - percona-postgresql15-pltcl-debuginfo
-          - percona-postgresql15-server-debuginfo
-          - percona-pgbadger
-          - percona-pgbouncer
-          - percona-pgaudit15_set_user
-          - percona-wal2json15
-      when: ansible_os_family == "RedHat"
-
-    - name: remove pgaudit rpm packages
-      yum:
-        name: percona-pgaudit
-        state: absent
-      when: ansible_os_family == "RedHat"
-
-    - name: remove pg_repack rpm packages
-      yum:
-        name: percona-pg_repack15
-        state: absent
-      when: ansible_os_family == "RedHat"
-
-    - name: remove pgbackrest rpm packages
-      yum:
-        name: percona-pgbackrest
+        name: percona-postgresql11
         state: absent
       when: ansible_os_family == "RedHat"
 
