--- a/ppg/pg-15-major-upgrade/tasks/main.yml
+++ b/ppg/pg-15-major-upgrade/tasks/main.yml
@@ -242,13 +242,13 @@
 - name: Add extensions to postgresql.conf for Debian
   lineinfile:
     path: /etc/postgresql/15/main/postgresql.conf
-    line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
+    line: shared_preload_libraries = 'pg_stat_monitor'
   when: ansible_os_family == "Debian"
 
 - name: Add extensions to postgresql.conf for RHEL
   lineinfile:
     path: /var/lib/pgsql/15/data/postgresql.conf
-    line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
+    line: shared_preload_libraries = 'pg_stat_monitor'
   when: ansible_os_family == "RedHat"
 
 - name: Restart postgresql service for RHEL based
