--- a/ppg/pg-13-minor-upgrade/tasks/main.yml
+++ b/ppg/pg-13-minor-upgrade/tasks/main.yml
@@ -46,90 +46,17 @@
     repo: "{{ lookup('env', 'TO_REPO') }}"
     pg_version: "{{ lookup('env', 'VERSION') }}"
 
-- name: install Percona Platform for PostgreSQL deb packages
-  apt:
-    name: "{{ packages }}"
-    update_cache: yes
-    state: latest
-  vars:
-    packages:
-    - percona-postgresql-13
-    - percona-postgresql-client-13
-    - percona-postgresql-doc-13
-    - percona-postgresql-plperl-13
-    - percona-postgresql-plpython3-13
-    - percona-postgresql-pltcl-13
-    - percona-postgresql-server-dev-13
-    - percona-postgresql-13-dbgsym
-    - percona-postgresql-client-13-dbgsym
-    - percona-postgresql-plperl-13-dbgsym
-    - percona-postgresql-plpython3-13-dbgsym
-    - percona-postgresql-pltcl-13-dbgsym
-  when: ansible_os_family == "Debian"
+- name: install Percona Platform for PostgreSQL 13 packages
+  include_tasks: ../../../../tasks/install_ppg13.yml
 
-- name: install Percona Platform for PostgreSQL deb packages
-  apt:
-    name: "{{ packages }}"
-    update_cache: yes
-    state: latest
-  vars:
-    packages:
-    - percona-postgresql-plpython3-13
-    - percona-postgresql-plpython3-13-dbgsym
-  when:
-    - ansible_os_family == "Debian"
+- name: Start postgresql service for RHEL based
+  service:
+    name: postgresql-13
+    state: started
+  when: ansible_os_family == "RedHat"
 
-- name: install Percona Platform for PostgreSQL rpm packages for RHEL
-  yum:
-    name: "{{ packages }}"
-    state: latest
-    update_cache: yes
-  vars:
-    packages:
-    - percona-postgresql-client-common
-    - percona-postgresql13
-    - percona-postgresql13-contrib
-    - percona-postgresql13-debuginfo
-    - percona-postgresql13-devel
-    - percona-postgresql13-docs
-    - percona-postgresql13-libs
-    - percona-postgresql13-llvmjit
-    - percona-postgresql13-plperl
-    - percona-postgresql13-pltcl
-    - percona-postgresql13-server
-    - percona-postgresql13-test
-    - percona-postgresql13-debuginfo
-  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
-
-- name: install Percona Platform for PostgreSQL rpm packages for RHEL
-  yum:
-    name: "{{ packages }}"
-    state: latest
-    update_cache: yes
-  vars:
-    packages:
-      - percona-postgresql-client-common
-      - percona-postgresql13
-      - percona-postgresql13-contrib
-      - percona-postgresql13-debuginfo
-      - percona-postgresql13-devel
-      - percona-postgresql13-docs
-      - percona-postgresql13-libs
-      - percona-postgresql13-llvmjit
-      - percona-postgresql13-plperl
-      - percona-postgresql13-pltcl
-      - percona-postgresql13-server
-      - percona-postgresql13-test
-      - percona-postgresql13-contrib-debuginfo
-      - percona-postgresql13-debuginfo
-      - percona-postgresql13-debugsource
-      - percona-postgresql13-devel-debuginfo
-      - percona-postgresql13-libs-debuginfo
-      - percona-postgresql13-plperl-debuginfo
-      - percona-postgresql13-plpython3-debuginfo
-      - percona-postgresql13-pltcl-debuginfo
-      - percona-postgresql13-server-debuginfo
-  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+- name: Install PPG tools
+  include_tasks: ../../../../tasks/install_ppg13_tools.yml
 
 - name: Restart postgresql service for RHEL based
   service:
