--- a/ppg/pg-14-minor-upgrade/tasks/main.yml
+++ b/ppg/pg-14-minor-upgrade/tasks/main.yml
@@ -46,118 +46,22 @@
     repo: "{{ lookup('env', 'TO_REPO') }}"
     pg_version: "{{ lookup('env', 'VERSION') }}"
 
-- name: install Percona Platform for PostgreSQL deb packages
+- name: Update apt cache
   apt:
-    name: "{{ packages }}"
     update_cache: yes
-    state: latest
-  vars:
-    packages:
-    - percona-postgresql-14
-    - percona-postgresql-client-14
-    - percona-postgresql-doc-14
-    - percona-postgresql-plperl-14
-    - percona-postgresql-plpython3-14
-    - percona-postgresql-pltcl-14
-    - percona-postgresql-server-dev-14
-    - percona-postgresql-14-dbgsym
-    - percona-postgresql-client-14-dbgsym
-    - percona-postgresql-plperl-14-dbgsym
-    - percona-postgresql-plpython3-14-dbgsym
-    - percona-postgresql-pltcl-14-dbgsym
   when: ansible_os_family == "Debian"
 
-- name: install Percona Platform for PostgreSQL deb packages
-  apt:
-    name: "{{ packages }}"
-    update_cache: yes
-    state: latest
-  vars:
-    packages:
-    - percona-postgresql-plpython3-14
-    - percona-postgresql-plpython3-14-dbgsym
-  when:
-    - ansible_os_family == "Debian"
-
-- name: install Percona Platform for PostgreSQL rpm packages for RHEL
-  yum:
-    name: "{{ packages }}"
-    state: latest
-    update_cache: yes
-  vars:
-    packages:
-    - percona-postgresql14
-    - percona-postgresql14-contrib
-    - percona-postgresql14-debuginfo
-    - percona-postgresql14-devel
-    - percona-postgresql14-docs
-    - percona-postgresql14-libs
-    - percona-postgresql14-llvmjit
-    - percona-postgresql14-plperl
-    - percona-postgresql14-pltcl
-    - percona-postgresql14-server
-    - percona-postgresql14-test
-    - percona-postgresql14-debuginfo
-  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
-
-- name: install Percona Platform for PostgreSQL rpm packages for RHEL
-  yum:
-    name: "{{ packages }}"
-    state: latest
-    update_cache: yes
-  vars:
-    packages:
-      - percona-postgresql14
-      - percona-postgresql14-contrib
-      - percona-postgresql14-debuginfo
-      - percona-postgresql14-devel
-      - percona-postgresql14-docs
-      - percona-postgresql14-libs
-      - percona-postgresql14-llvmjit
-      - percona-postgresql14-plperl
-      - percona-postgresql14-pltcl
-      - percona-postgresql14-server
-      - percona-postgresql14-test
-      - percona-postgresql14-contrib-debuginfo
-      - percona-postgresql14-debuginfo
-      - percona-postgresql14-debugsource
-      - percona-postgresql14-devel-debuginfo
-      - percona-postgresql14-libs-debuginfo
-      - percona-postgresql14-plperl-debuginfo
-      - percona-postgresql14-plpython3-debuginfo
-      - percona-postgresql14-pltcl-debuginfo
-      - percona-postgresql14-server-debuginfo
-      - percona-postgresql14-test-debuginfo
-  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
-
-- name: Stop postgresql service for RHEL based
-  service:
-    name: postgresql-14
-    state: stopped
-  when: ansible_os_family == "RedHat"
-
-- name: Stop postgresql service for Debian based
-  service:
-    name: postgresql
-    state: stopped
-  when: ansible_os_family == "Debian"
-
-- pause:
-    minutes: 1
+- name: install Percona Platform for PostgreSQL 14 packages
+  include_tasks: ../../../../tasks/install_ppg14.yml
 
 - name: Start postgresql service for RHEL based
   service:
     name: postgresql-14
     state: started
-    enabled: true
   when: ansible_os_family == "RedHat"
 
-- name: Start postgresql service for Debian based
-  service:
-    name: postgresql
-    state: started
-    enabled: true
-  when: ansible_os_family == "Debian"
+- name: Install PPG tools
+  include_tasks: ../../../../tasks/install_ppg14_tools.yml
 
 - name: Upgrade debian development packages
   apt:
@@ -173,6 +77,12 @@
       - libpgtypes3
       - libpq-dev
       - libpq5
+  when: ansible_os_family == "Debian"
+
+- name: Start postgresql service for Debian based
+  service:
+    name: postgresql
+    state: started
   when: ansible_os_family == "Debian"
 
 - name: Install GCC Deb
