--- a/ppg/pg-15-major-upgrade/tasks/main.yml
+++ b/ppg/pg-15-major-upgrade/tasks/main.yml
@@ -55,17 +55,123 @@
     repo: "{{ lookup('env', 'TO_REPO') }}"
     pg_version: "{{ lookup('env', 'VERSION') }}"
 
-- name: install Percona Platform for PostgreSQL 15 packages
-  include_tasks: ../../../../tasks/install_ppg15.yml
+- name: install Percona Platform for PostgreSQL deb packages
+  apt:
+    name: "{{ packages }}"
+    update_cache: yes
+    state: latest
+  vars:
+    packages:
+      - percona-postgresql
+      - percona-postgresql-15
+      - percona-postgresql-all
+      - percona-postgresql-client
+      - percona-postgresql-client-15
+      - percona-postgresql-common
+      - percona-postgresql-contrib
+      - percona-postgresql-doc
+      - percona-postgresql-doc-15
+      - percona-postgresql-plperl-15
+      - percona-postgresql-plpython3-15
+      - percona-postgresql-pltcl-15
+      - percona-postgresql-server-dev-15
+      - percona-postgresql-server-dev-all
+      - percona-postgresql-15-dbgsym
+      - percona-postgresql-client-15-dbgsym
+      - percona-postgresql-plperl-15-dbgsym
+      - percona-postgresql-plpython3-15-dbgsym
+      - percona-postgresql-pltcl-15-dbgsym
+  when: ansible_os_family == "Debian"
 
-- name: Start postgresql service for RHEL based
-  service:
-    name: postgresql-15
-    state: started
+- name: install Percona Platform for PostgreSQL deb packages
+  apt:
+    name: "{{ packages }}"
+    update_cache: yes
+    state: latest
+  vars:
+    packages:
+    - percona-postgresql-plpython3-15
+    - percona-postgresql-plpython3-15-dbgsym
+  when:
+    - ansible_os_family == "Debian"
+
+- name: install Percona Platform for PostgreSQL rpm packages for RHEL
+  yum:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+      - percona-postgresql-client-common
+      - percona-postgresql-common
+      - percona-postgresql-server-dev-all
+      - percona-postgresql15
+      - percona-postgresql15-contrib
+      - percona-postgresql15-debuginfo
+      - percona-postgresql15-devel
+      - percona-postgresql15-docs
+      - percona-postgresql15-libs
+      - percona-postgresql15-llvmjit
+      - percona-postgresql15-plperl
+      - percona-postgresql15-plpython3
+      - percona-postgresql15-pltcl
+      - percona-postgresql15-server
+      - percona-postgresql15-test
+      - percona-postgresql15-debuginfo
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
+
+- name: install Percona Platform for PostgreSQL rpm packages for RHEL
+  yum:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+        - percona-postgresql-client-common
+        - percona-postgresql-common
+        - percona-postgresql-server-dev-all
+        - percona-postgresql15
+        - percona-postgresql15-contrib
+        - percona-postgresql15-debuginfo
+        - percona-postgresql15-devel
+        - percona-postgresql15-docs
+        - percona-postgresql15-libs
+        - percona-postgresql15-llvmjit
+        - percona-postgresql15-plpython3
+        - percona-postgresql15-plperl
+        - percona-postgresql15-pltcl
+        - percona-postgresql15-server
+        - percona-postgresql15-test
+        - percona-postgresql15-contrib-debuginfo
+        - percona-postgresql15-debuginfo
+        - percona-postgresql15-debugsource
+        - percona-postgresql15-devel-debuginfo
+        - percona-postgresql15-libs-debuginfo
+        - percona-postgresql15-plperl-debuginfo
+        - percona-postgresql15-pltcl-debuginfo
+        - percona-postgresql15-plpython3-debuginfo
+        - percona-postgresql15-server-debuginfo
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
+- name: Install pg-stat-monitor RHEL
+  yum:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+      - percona-pg_stat_monitor15
   when: ansible_os_family == "RedHat"
 
-- name: Install PPG tools
-  include_tasks: ../../../../tasks/install_ppg15_tools.yml
+- name: Install pg-stat-monitor debian
+  apt:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+      - percona-pg-stat-monitor15
+  when: ansible_os_family == "Debian"
 
 - name: Initialize Postgres RHEL
   command: /usr/pgsql-15/bin/postgresql-15-setup initdb
@@ -131,6 +237,18 @@
     path: /var/lib/pgsql/15/data/postgresql.conf
     search_string: 'port'
     line: port = 5432
+  when: ansible_os_family == "RedHat"
+
+- name: Add extensions to postgresql.conf for Debian
+  lineinfile:
+    path: /etc/postgresql/15/main/postgresql.conf
+    line: shared_preload_libraries = 'pg_stat_monitor'
+  when: ansible_os_family == "Debian"
+
+- name: Add extensions to postgresql.conf for RHEL
+  lineinfile:
+    path: /var/lib/pgsql/15/data/postgresql.conf
+    line: shared_preload_libraries = 'pg_stat_monitor'
   when: ansible_os_family == "RedHat"
 
 - name: Restart postgresql service for RHEL based
