--- a/tasks/install_ppg_meta_ha.yml
+++ b/tasks/install_ppg_meta_ha.yml
@@ -4,7 +4,7 @@
 
   - name: Install Postgresql Server meta HA package Debian
     apt:
-      name: percona-ppg-server-ha{{ version }}
+      name: percona-ppg-server-ha-{{ version }}
       state: latest
     when: ansible_os_family == "Debian"
 
