--- a/tasks/install_ppg_meta_ha.yml
+++ b/tasks/install_ppg_meta_ha.yml
@@ -21,6 +21,7 @@
     apt:
       name: percona-ppg-server-ha-{{ version }}
       state: latest
+      update_cache: yes
     when: ansible_os_family == "Debian"
 
   - name: Install Postgresql Server meta HA package RHEL
