--- a/ppg/pg-14-major-upgrade/tasks/main.yml
+++ b/ppg/pg-14-major-upgrade/tasks/main.yml
@@ -55,17 +55,123 @@
     repo: "{{ lookup('env', 'TO_REPO') }}"
     pg_version: "{{ lookup('env', 'VERSION') }}"
 
-- name: install Percona Platform for PostgreSQL 14 packages
-  include_tasks: ../../../../tasks/install_ppg14.yml
+- name: install Percona Platform for PostgreSQL deb packages
+  apt:
+    name: "{{ packages }}"
+    update_cache: yes
+    state: latest
+  vars:
+    packages:
+      - percona-postgresql
+      - percona-postgresql-14
+      - percona-postgresql-all
+      - percona-postgresql-client
+      - percona-postgresql-client-14
+      - percona-postgresql-common
+      - percona-postgresql-contrib
+      - percona-postgresql-doc
+      - percona-postgresql-doc-14
+      - percona-postgresql-plperl-14
+      - percona-postgresql-plpython3-14
+      - percona-postgresql-pltcl-14
+      - percona-postgresql-server-dev-14
+      - percona-postgresql-server-dev-all
+      - percona-postgresql-14-dbgsym
+      - percona-postgresql-client-14-dbgsym
+      - percona-postgresql-plperl-14-dbgsym
+      - percona-postgresql-plpython3-14-dbgsym
+      - percona-postgresql-pltcl-14-dbgsym
+  when: ansible_os_family == "Debian"
 
-- name: Start postgresql service for RHEL based
-  service:
-    name: postgresql-14
-    state: started
+- name: install Percona Platform for PostgreSQL deb packages
+  apt:
+    name: "{{ packages }}"
+    update_cache: yes
+    state: latest
+  vars:
+    packages:
+    - percona-postgresql-plpython3-14
+    - percona-postgresql-plpython3-14-dbgsym
+  when:
+    - ansible_os_family == "Debian"
+
+- name: install Percona Platform for PostgreSQL rpm packages for RHEL
+  yum:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+      - percona-postgresql-client-common
+      - percona-postgresql-common
+      - percona-postgresql-server-dev-all
+      - percona-postgresql14
+      - percona-postgresql14-contrib
+      - percona-postgresql14-debuginfo
+      - percona-postgresql14-devel
+      - percona-postgresql14-docs
+      - percona-postgresql14-libs
+      - percona-postgresql14-llvmjit
+      - percona-postgresql14-plperl
+      - percona-postgresql14-plpython3
+      - percona-postgresql14-pltcl
+      - percona-postgresql14-server
+      - percona-postgresql14-test
+      - percona-postgresql14-debuginfo
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "7"
+
+- name: install Percona Platform for PostgreSQL rpm packages for RHEL
+  yum:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+        - percona-postgresql-client-common
+        - percona-postgresql-common
+        - percona-postgresql-server-dev-all
+        - percona-postgresql14
+        - percona-postgresql14-contrib
+        - percona-postgresql14-debuginfo
+        - percona-postgresql14-devel
+        - percona-postgresql14-docs
+        - percona-postgresql14-libs
+        - percona-postgresql14-llvmjit
+        - percona-postgresql14-plpython3
+        - percona-postgresql14-plperl
+        - percona-postgresql14-pltcl
+        - percona-postgresql14-server
+        - percona-postgresql14-test
+        - percona-postgresql14-contrib-debuginfo
+        - percona-postgresql14-debuginfo
+        - percona-postgresql14-debugsource
+        - percona-postgresql14-devel-debuginfo
+        - percona-postgresql14-libs-debuginfo
+        - percona-postgresql14-plperl-debuginfo
+        - percona-postgresql14-pltcl-debuginfo
+        - percona-postgresql14-plpython3-debuginfo
+        - percona-postgresql14-server-debuginfo
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
+
+- name: Install pg-stat-monitor RHEL
+  yum:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+      - percona-pg_stat_monitor14
   when: ansible_os_family == "RedHat"
 
-- name: Install PPG tools
-  include_tasks: ../../../../tasks/install_ppg14_tools.yml
+- name: Install pg-stat-monitor debian
+  apt:
+    name: "{{ packages }}"
+    state: latest
+    update_cache: yes
+  vars:
+    packages:
+      - percona-pg-stat-monitor14
+  when: ansible_os_family == "Debian"
 
 - name: Initialize Postgres RHEL
   command: /usr/pgsql-14/bin/postgresql-14-setup initdb
@@ -75,7 +181,7 @@
 
 - name: Stop postgresql service for RHEL based
   service:
-    name: postgresql-13
+    name: postgresql-14
     state: stopped
   when: ansible_os_family == "RedHat"
 
@@ -105,16 +211,16 @@
     chdir: /tmp
   when: ansible_os_family == "Debian"
 
-- name: Change postgresql 13 port in config Debian
+- name: Change postgresql 14 port in config Debian
   lineinfile:
-    path: /etc/postgresql/13/main/postgresql.conf
+    path: /etc/postgresql/14/main/postgresql.conf
     search_string: 'port'
     line: port = 5433
   when: ansible_os_family == "Debian"
 
-- name: Change postgresql 13 port in config RHEL
+- name: Change postgresql 14 port in config RHEL
   lineinfile:
-    path: /var/lib/pgsql/13/data/postgresql.conf
+    path: /var/lib/pgsql/14/data/postgresql.conf
     search_string: 'port'
     line: port = 5433
   when: ansible_os_family == "RedHat"
@@ -131,6 +237,18 @@
     path: /var/lib/pgsql/14/data/postgresql.conf
     search_string: 'port'
     line: port = 5432
+  when: ansible_os_family == "RedHat"
+
+- name: Add extensions to postgresql.conf for Debian
+  lineinfile:
+    path: /etc/postgresql/14/main/postgresql.conf
+    line: shared_preload_libraries = 'pg_stat_monitor'
+  when: ansible_os_family == "Debian"
+
+- name: Add extensions to postgresql.conf for RHEL
+  lineinfile:
+    path: /var/lib/pgsql/14/data/postgresql.conf
+    line: shared_preload_libraries = 'pg_stat_monitor'
   when: ansible_os_family == "RedHat"
 
 - name: Restart postgresql service for RHEL based
